Renamed methods on DeprecationLogger to be a little more explicit about what they are doing.